fix(frontend): Improved spacing to give more space to the title

--- a/frontend/src/component/Workspace/Folder.styl
+++ b/frontend/src/component/Workspace/Folder.styl
@@ -80,7 +80,7 @@ folderopen()
     &__dragPreview
       display flex
       align-items center
-      flex 1
+      flex 3
       width 0 // INFO - CH - 2019-06-06 - this allows the text-overflow ellipsis
     &__lastModification
       flex 1
