--- a/frontend/src/css/ContentItem.styl
+++ b/frontend/src/css/ContentItem.styl
@@ -24,7 +24,7 @@ createInFolderButtonWidth = 74px
   &__dragPreview
     display flex
     align-items center
-    flex 1
+    flex 3
     white-space nowrap
     overflow hidden
     text-overflow ellipsis
