--- a/frontend/src/css/ContentItemHeader.styl
+++ b/frontend/src/css/ContentItemHeader.styl
@@ -5,7 +5,7 @@
     padding standardSpacing
     text-align center
   &__name
-    flex-grow 2
+    flex-grow 3
     padding standardSpacing
   &__status
     flex-grow 0
